# MLScriptAutomatize

./: .gitignore  ARCHITECTURE.md  README.md  docs.md  pyproject.toml  requirements.txt  settings.py  settings.pydantic.py  setup.cfg
ModelForge/: logger_config.py  main.py  sandbox.ipynb  settings.py
ModelForge/integration/: api_integration.py  cron_executor.py  db_storage.py  doc.md  logging_pipeline.py
docs/: info.md
logs/: info.md
modules/data_analysis/: data_statistics.py
modules/data_loading/: load_from_static.py
modules/data_loading_to_dataFrame/: acync_load_from_db.py  data_loading.doc.md  load_from_api.py  load_from_db.py  load_from_dynamic.py  load_from_static.py
modules/data_validation/: data_validation.doc.md  feature_to_datetime.py  handle_missing_values.py  normalize_numerical_columns.py  remove_dublicate_rows.py
plots/: info.md
reports/: info.md
tests/: conftest.py
tests/data_analysis_tests/: test_data_statistics.py  test_trend_season_analysis.py
tests/data_loading_tests/: test_async_load_from_db.py  test_load_from_csv.py  test_load_from_db.py  test_load_from_kaggle.py  test_load_from_static.py
tests/data_validation_tests/: test_encoding.py  test_feature_to_datetime.py  test_handle_missing_values.py  test_handle_outliers.py  test_normalization.py  test_remove_dublicates.py
tests/integration_tests/: test_api_integration.py  test_cron_executor.py
ui/: main.py  ui_main_window.py  ui_styles.py
ui/crisp_steps/: step_1_business_understanding.py  step_2_data_understanding.py  step_3_data_preparation.py  step_4_modeling.py  step_5_evaluation.py  step_6_deployment.py
(+17 files in other folders)
